// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Token widget Should render component 1`] = `
<div>
  <div
    class="root"
  >
    <div
      class="amount"
    >
      0
    </div>
    <div
      class="symbol"
    >
      NEAR
    </div>
  </div>
</div>
`;

exports[`Token widget Should render valid icon 1`] = `
<div>
  <div
    class="root"
  >
    <div
      class="amount"
    >
      0
    </div>
    <div
      class="icon"
      style="background-image: url(validIcon);"
    />
    <div
      class="symbol"
    >
      HI
    </div>
  </div>
</div>
`;
